# rag-practice

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  reindex.py  run.sh
app/: main.py
app/api/: endpoints.py
app/core/: chunking.py  config.py  embedding.py
app/services/: ingest.py  llm_service.py  vector_db.py
benchmark/: benchmark.py  generate_gold.py  plotter.py  run_full_suite.py  run_single.py
benchmark/gold/: aws-overview_gold_responses.json  ec2-ug_gold_responses.json
benchmark/results/: final_benchmark_results_aws_overview.csv  final_benchmark_results_ec2_ug.csv
data/output/: aws-overview_recursive_medium.json  chunked_data_length.json  chunked_data_recursive.json  chunked_data_semantic.json  ec2-ug_length_medium.json  ec2-ug_recursive_small.json  index_registry.json
es_data/_state/: _20.cfe  _20.cfs  _20.si  _24.cfe  _24.cfs  _24.si  _28.cfe  _28.cfs  _28.si  _2e.cfe  _2e.cfs  _2e.si  _2e_2.liv  _2f.cfe  _2f.cfs  _2f.si  _2g.cfe  _2g.cfs  _2g.si  node-3.st  node-5.st  segments_2k  segments_2o  segments_38
es_data/indices/jmxeoIDhSpywKryLtnRpOw/0/_state/: retention-leases-1.st  retention-leases-2.st  retention-leases-4.st  state-0.st  state-2.st
es_data/indices/jmxeoIDhSpywKryLtnRpOw/_state/: state-2.st  state-4.st
es_data/indices/w5crTV7tRoCyOHUHOv6NOA/_state/: state-2.st  state-4.st
es_data/snapshot_cache/: segments_4  segments_6
test/: compare_benchmarks.py  test_es_connection.py  test_hybrid.py  test_ingest.py  test_torch.py
(+90 files in other folders)
