[project]
name = "rag-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Harsh Krishnatre",email = "harsh.krishnatre@roadcast.in"}
]
readme = "README.md"
requires-python = ">=3.10 <4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.4,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "elasticsearch (==8.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
